Fix incorrect overflow mode on popup

--- a/scrabble.css
+++ b/scrabble.css
@@ -245,13 +245,15 @@ body.scrabble {
 }
 
 /* word lookup popup */
+#wordLookupPopup {
+	overflow-y: auto;
+}
 #wordLookupPopup .wordLookupResult {
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
 	justify-content: flex-start;
 	align-items: center;
-	overflow-y: auto;
 }
 #wordLookupPopup::-webkit-scrollbar-track {
 	background-color: var(--carolina-blue);
